FIX: Fixed overflow issues on About Us page due to animations starting off screen

--- a/public/wp-content/themes/storyteller/style.css
+++ b/public/wp-content/themes/storyteller/style.css
@@ -739,7 +739,7 @@ html {
     top: -82px;
     left: 0;
     width: 100%;
-    z-index: 1600
+    z-index: 1600;
 }
 
 .stats {
